Ticket #28561: Maven install.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -5651,6 +5651,7 @@ com.top_logic.layout.table.dnd.TableDropTarget.DropType.ROW = Row
 com.top_logic.layout.table.dnd.TableDropTarget.DropType.ROW.tooltip = A drop occurs to a row itself, without positioning relative to the target row.
 com.top_logic.layout.table.export.AbstractTableExportHandler = Table export handler
 com.top_logic.layout.table.export.AbstractTableExportHandler.Config.dynamic-download-name = Dynamic download name
+com.top_logic.layout.table.export.AbstractTableExportHandler.Config.dynamic-download-name.tooltip = Optional provider for an dynamic download-name. If this is used the default download-key (see <i>Download name key</i> (<i>export configuration</i>), <i>download name</i>) must contain the placeholder {0}.
 com.top_logic.layout.table.export.AbstractTableExportHandler.tooltip = Base class for <i>table data</i> exports.
 com.top_logic.layout.table.export.ConfiguredDownloadNameProvider = Configured download name provider
 com.top_logic.layout.table.export.ConfiguredDownloadNameProvider.tooltip = <i>Configured instance</i> <i>Download name provider</i>.
