--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -5651,6 +5651,7 @@ com.top_logic.layout.table.dnd.TableDropTarget.DropType.ROW = Zeile
 com.top_logic.layout.table.dnd.TableDropTarget.DropType.ROW.tooltip = Ein Ablage erfolgt auf eine Zeile selbst, ohne relative Positionierung.
 com.top_logic.layout.table.export.AbstractTableExportHandler = Handler für den Tabellenexport
 com.top_logic.layout.table.export.AbstractTableExportHandler.Config.dynamic-download-name = Dynamischer Download-Name
+com.top_logic.layout.table.export.AbstractTableExportHandler.Config.dynamic-download-name.tooltip = Optionale Berechnung für einen dynamischen Download-Namen. Wenn dies verwendet wird, muss der Standard-Download-Schlüssel (siehe <i>Download-Namensschlüssel</i><i>(Exportkonfiguration</i>), <i>Download-Name</i>) den Platzhalter {0} enthalten.
 com.top_logic.layout.table.export.AbstractTableExportHandler.tooltip = Basisklasse für den Export von <i>Tabellendaten</i>.
 com.top_logic.layout.table.export.ConfiguredDownloadNameProvider = Konfigurierte Berechnung des Download-Namens
 com.top_logic.layout.table.export.ConfiguredDownloadNameProvider.tooltip = <i>Konfigurierte Instanz</i> <i>Download-Namensberechnung</i>.
