Ticket #28564: API cleanup: Authentication must not fail with IO error.

--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
@@ -15,8 +15,10 @@ class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUT
 class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.ERROR_AUTH_FAILED__REASONS = Mehrere Authentifizierungsversuche sind fehlgeschlagen: {0}.
 class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.ERROR_MISSING_AUTHENTICATION_SECRET = Fehlendes Geheimnis für die Authentifizierung.
 class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.ERROR_MULTIPLE_USERS__USER1_USER2 = Uneindeutige Benutzerauthentifizierung für verschiedene Benutzer: {0} vs. {1}.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.ERROR_TOKEN_INTROSPECTION_FAILED__MSG = Introspektion des Token fehlgeschlagen: {0}
 class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.NO_SUCH_ACCOUNT__USER = Kein Konto für Benutzer '{0}' gefunden.
 class.com.top_logic.service.openapi.server.authentication.oauth.I18NConstants.ERROR_MULTIPLE_CLIENT_CREDENTIAL_SECRETS__DOMAIN = Mehrere Client Credential-Konfigurationen für Domäne {0}.
+class.com.top_logic.service.openapi.server.authentication.oauth.I18NConstants.ERROR_NO_INTROSPECTION_ENDPOINT__DOMAIN = "Kein Token-Introspektionsendpunkt für Domäne {0}.
 class.com.top_logic.service.openapi.server.authentication.oauth.I18NConstants.NO_USERNAME_IN_INTROSPECTION_RESPONSE = Kein Benutzername für das Token verfügbar.
 class.com.top_logic.service.openapi.server.conf.I18NConstants.ERROR_BODY_PARAM_UNSUPPORTED_FOR_METHOD__PARAM__METHOD = Der Anfrageparameter {0} ist bei der ausgewählten Methode {1} nicht erlaubt.
 class.com.top_logic.service.openapi.server.conf.I18NConstants.ERROR_LOCAL_GLOBAL_PARAMETER_CLASH__CLASHES = Es dürfen keine Parameter mit dem selben Namen und dem selben Auftrittsort sowohl an der API und der Operation definiert werden: {0}
