--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
@@ -15,8 +15,10 @@ class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUT
 class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.ERROR_AUTH_FAILED__REASONS = Multiple authentication attempts failed: {0}.
 class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.ERROR_MISSING_AUTHENTICATION_SECRET = Missing authentication secret.
 class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.ERROR_MULTIPLE_USERS__USER1_USER2 = Multiple user authentication for different users: {0} vs. {1}.
+class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.ERROR_TOKEN_INTROSPECTION_FAILED__MSG = Token introspection failed: {0}
 class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.NO_SUCH_ACCOUNT__USER = No account for user ''{0}'' found.
 class.com.top_logic.service.openapi.server.authentication.oauth.I18NConstants.ERROR_MULTIPLE_CLIENT_CREDENTIAL_SECRETS__DOMAIN = Multiple Client Credential configurations for domain {0}.
+class.com.top_logic.service.openapi.server.authentication.oauth.I18NConstants.ERROR_NO_INTROSPECTION_ENDPOINT__DOMAIN = "No token introspection endpoint for domain {0}.
 class.com.top_logic.service.openapi.server.authentication.oauth.I18NConstants.NO_USERNAME_IN_INTROSPECTION_RESPONSE = No username available for token.
 class.com.top_logic.service.openapi.server.conf.I18NConstants.ERROR_BODY_PARAM_UNSUPPORTED_FOR_METHOD__PARAM__METHOD = The request parameter {0} is not allowed for the selected method {1}.
 class.com.top_logic.service.openapi.server.conf.I18NConstants.ERROR_LOCAL_GLOBAL_PARAMETER_CLASH__CLASHES = It is not allowed to define parameter with same name and location both in the API and in the operation: {0}
