Ticket #28564: Allow to configure technical API key users.

--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
@@ -4,6 +4,7 @@ class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.A
 class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_COOKIE__PARAMETER = No cookie with name ''{0}'' found.
 class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_HEADER__PARAMETER = No header with name ''{0}'' found.
 class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_QUERY_PARAM__PARAMETER = No query parameter with name ''{0}'' found.
+class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.ERROR_REQUEST_USER_DOES_NOT_EXIST__NAME = Technical user ''{0}'' for request processing does not exist..
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_MISSING_AUTHENTICATION_DATA = Missing authentication data.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_NO_BASIC_AUTH = Invalid authentication data for scheme basic.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_WRONG_AUTHENTICATION_DATA = Invalid user or password.
@@ -64,6 +65,8 @@ com.top_logic.service.openapi.server.authentication.apikey.APIKeyAuthentication 
 com.top_logic.service.openapi.server.authentication.apikey.APIKeyAuthentication.tooltip = <i>Authentication configuration</i> to authenticate using an API key.
 com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret = API key
 com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.tooltip = <i>API key secret</i> for the <i>OpenAPI</i> server.
+com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.user-id = User ID
+com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.user-id.tooltip = The login name of the technical user, in which context the request should be executed. <p> If a value is given, the request processing takes place in the context of the named user. </p>
 com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications = Server authentications
 com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.authentications = Authentications
 com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.authentications.tooltip = All available authentications.
