--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
@@ -4,6 +4,7 @@ class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.A
 class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_COOKIE__PARAMETER = Kein Cookie mit dem Namen '{0}' gefunden.
 class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_HEADER__PARAMETER = Keine Kopfzeile mit dem Namen '{0}' gefunden.
 class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_QUERY_PARAM__PARAMETER = Kein Abfrageparameter mit dem Namen '{0}' gefunden.
+class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.ERROR_REQUEST_USER_DOES_NOT_EXIST__NAME = Der technische Benutzer '{0}'' für die Antragsbearbeitung existiert nicht.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_MISSING_AUTHENTICATION_DATA = Fehlende Authentifizierung.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_NO_BASIC_AUTH = Ungültige Authentifizierungsdaten für das Schema basic.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_WRONG_AUTHENTICATION_DATA = Ungültiger Benutzer oder ungültiges Passwort.
@@ -64,6 +65,8 @@ com.top_logic.service.openapi.server.authentication.apikey.APIKeyAuthentication 
 com.top_logic.service.openapi.server.authentication.apikey.APIKeyAuthentication.tooltip = <i>Authentifizierungskonfiguration</i> zur Authentifizierung mit einem API-Schlüssel.
 com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret = API-Schlüssel
 com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.tooltip = <i>API-Schlüsselgeheimnis</i> für den <i>OpenAPI-Server</i>.
+com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.user-id = Benutzer-ID
+com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.user-id.tooltip = Der Anmeldename des technischen Benutzers, in dessen Kontext die Anfrage ausgeführt werden soll. <p> Wenn ein Wert angegeben wird, erfolgt die Bearbeitung der Anfrage im Kontext des genannten Benutzers. </p>
 com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications = Server-Authentifizierungen
 com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.authentications = Authentifizierungen
 com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.authentications.tooltip = Alle verfügbaren Authentifizierungen.
