Ticket #28564: Allow associate technical users to authorization tokens.

--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
@@ -66,7 +66,7 @@ com.top_logic.service.openapi.server.authentication.apikey.APIKeyAuthentication.
 com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret = API key
 com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.tooltip = <i>API key secret</i> for the <i>OpenAPI</i> server.
 com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.user-id = User ID
-com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.user-id.tooltip = The login name of the technical user, in which context the request should be executed. <p> If a value is given, the request processing takes place in the context of the named user. </p>
+com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.user-id.tooltip = The optional login name of the technical user, in which context the request should be executed. <p> If a value is given, the request processing takes place in the context of the named user. If no value is given, request processing takes place in system context. </p>
 com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications = Server authentications
 com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.authentications = Authentications
 com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.authentications.tooltip = All available authentications.
@@ -82,8 +82,16 @@ com.top_logic.service.openapi.server.authentication.http.basic.ServerBasicAuthSe
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentialSecret = OpenID authentication
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentialSecret.tooltip = Authentication data for an <i>OpenAPI</i> server towards the <i>OpenID</i> server.
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials = OpenID authentication
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials$Config$TechnicalUserSpec = Technical user spec
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials$Config$TechnicalUserSpec.tooltip = Assignment of a system user to a client ID.
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.TechnicalUserSpec.client-id = Client ID
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.TechnicalUserSpec.client-id.tooltip = The client ID for which an authenticated token was issued. <p> Use <code>*</code> to assign a technical user to all client IDs without special configuration. </p>
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.TechnicalUserSpec.user-name = User name
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.TechnicalUserSpec.user-name.tooltip = The technical user in which context request processing should occur.
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.in-user-context = In user context
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.in-user-context.tooltip = Whether the protected operation must be executed in user context. <p> If this property is set, then it is expected that the sent access token is the personal token of a person which has an account in the application. The operation is then processed as if the user has executed it after a login. </p>
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.technical-users = Technical users
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.technical-users.tooltip = Mapping of client IDs to technical users. <p> If request processing should happen in user context, but no user name was provided in an authorization token, this mapping is used to associate a system user with a client ID for which a token was issued. In such case, authentication only succeeds, if a technical user is associated to the requesting client. </p>
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.username-field = Username field
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.username-field.tooltip = Name of the field in the token introspection response which contains the user. <p> When no field is configured the default field "username" is used to find the user name. </p>
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.tooltip = <i>Token based authentication</i> to authenticate by using client credentials or users access token.
