--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
@@ -4,7 +4,7 @@ class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.A
 class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_COOKIE__PARAMETER = Kein Cookie mit dem Namen '{0}' gefunden.
 class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_HEADER__PARAMETER = Keine Kopfzeile mit dem Namen '{0}' gefunden.
 class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_QUERY_PARAM__PARAMETER = Kein Abfrageparameter mit dem Namen '{0}' gefunden.
-class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.ERROR_REQUEST_USER_DOES_NOT_EXIST__NAME = Der technische Benutzer '{0}'' für die Antragsbearbeitung existiert nicht.
+class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.ERROR_REQUEST_USER_DOES_NOT_EXIST__NAME = Der technische Benutzer '{0}'' für die Anfragebearbeitung existiert nicht.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_MISSING_AUTHENTICATION_DATA = Fehlende Authentifizierung.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_NO_BASIC_AUTH = Ungültige Authentifizierungsdaten für das Schema basic.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_WRONG_AUTHENTICATION_DATA = Ungültiger Benutzer oder ungültiges Passwort.
@@ -66,7 +66,7 @@ com.top_logic.service.openapi.server.authentication.apikey.APIKeyAuthentication.
 com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret = API-Schlüssel
 com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.tooltip = <i>API-Schlüsselgeheimnis</i> für den <i>OpenAPI-Server</i>.
 com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.user-id = Benutzer-ID
-com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.user-id.tooltip = Der Anmeldename des technischen Benutzers, in dessen Kontext die Anfrage ausgeführt werden soll. <p> Wenn ein Wert angegeben wird, erfolgt die Bearbeitung der Anfrage im Kontext des genannten Benutzers. </p>
+com.top_logic.service.openapi.server.authentication.apikey.ServerAPIKeySecret.user-id.tooltip = Der optionale Anmeldename des technischen Benutzers, in dessen Kontext die Anfrage ausgeführt werden soll. <p> Wird ein Wert angegeben, erfolgt die Bearbeitung der Anfrage im Kontext des genannten Benutzers. Wird kein Wert angegeben, erfolgt die Bearbeitung der Anfrage im Systemkontext. </p>
 com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications = Server-Authentifizierungen
 com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.authentications = Authentifizierungen
 com.top_logic.service.openapi.server.authentication.conf.ServerAuthentications.authentications.tooltip = Alle verfügbaren Authentifizierungen.
@@ -82,8 +82,16 @@ com.top_logic.service.openapi.server.authentication.http.basic.ServerBasicAuthSe
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentialSecret = OpenID-Authentifizierung
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentialSecret.tooltip = Authentifizierungsdaten für einen <i>OpenAPI-Server</i> gegenüber dem <i>OpenID-Server</i>.
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials = OpenID-Authentifizierung
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials$Config$TechnicalUserSpec = Technische Benutzer
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials$Config$TechnicalUserSpec.tooltip = Zuweisung eines Systembenutzers zu einer Client-ID.
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.TechnicalUserSpec.client-id = Client-ID
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.TechnicalUserSpec.client-id.tooltip = Die Client-ID, für die ein authentifiziertes Token ausgestellt wurde. <p> Verwenden Sie <code>*</code>, um allen Client-IDs ohne besondere Konfiguration einen technischen Benutzer zuzuweisen. </p>
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.TechnicalUserSpec.user-name = Name des Benutzers
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.TechnicalUserSpec.user-name.tooltip = Der technische Benutzer, in dessen Kontext die Bearbeitung der Anfrage erfolgen soll.
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.in-user-context = Im Benutzerkontext
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.in-user-context.tooltip = Ob die Anfragebearbeitung im Benutzerkontext ausgeführt werden soll. <p> Wenn diese Eigenschaft gesetzt ist, wird erwartet, dass das gesendete Zugriffstoken das persönliche Token einer Person ist, die ein Konto in der Anwendung hat. Der Vorgang wird dann so verarbeitet, als ob der Benutzer ihn nach einer Anmeldung ausgeführt hätte. </p>
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.technical-users = Technische Benutzer
+com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.technical-users.tooltip = Abbildung von Client-IDs auf technische Benutzer. <p> Wenn die Anfragebearbeitung im Benutzerkontext erfolgen soll, aber kein Benutzername in einem Autorisierungs-Token angegeben wurde, wird diese Abbildung verwendet, um einen Systembenutzer mit einer Client-ID zu verknüpfen, für die ein Token ausgestellt wurde. In diesem Fall ist die Authentifizierung nur dann erfolgreich, wenn ein technischer Benutzer mit dem anfragenden Client verknüpft ist. </p>
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.username-field = Feld für Benutzernamen
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.Config.username-field.tooltip = Name des Feldes in der Token-Introspektionsantwort, das den Benutzer enthält. <p> Wenn kein Feld konfiguriert ist, wird das Standardfeld "username" verwendet, um den Benutzernamen zu finden. </p>
 com.top_logic.service.openapi.server.authentication.oauth.ServerCredentials.tooltip = <i>Token-basierte Authentifizierung</i> zur Authentifizierung mit Client-Anmeldeinformationen oder Benutzer-Zugangs-Token.
