--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -5653,14 +5653,12 @@ com.top_logic.layout.table.export.AbstractTableExportHandler = Handler für den T
 com.top_logic.layout.table.export.AbstractTableExportHandler.Config.dynamic-download-name = Dynamischer Download-Name
 com.top_logic.layout.table.export.AbstractTableExportHandler.Config.dynamic-download-name.tooltip = Optionale Berechnung für einen dynamischen Download-Namen. Wenn dies verwendet wird, muss der Standard-Download-Schlüssel (siehe <i>Download-Namensschlüssel</i><i>(Exportkonfiguration</i>), <i>Download-Name</i>) den Platzhalter {0} enthalten.
 com.top_logic.layout.table.export.AbstractTableExportHandler.tooltip = Basisklasse für den Export von <i>Tabellendaten</i>.
-com.top_logic.layout.table.export.ConfiguredDownloadNameProvider = Konfigurierte Berechnung des Download-Namens
-com.top_logic.layout.table.export.ConfiguredDownloadNameProvider.tooltip = <i>Konfigurierte Instanz</i> <i>Download-Namensberechnung</i>.
 com.top_logic.layout.table.export.ExcelExportHandler = Excel-Export-Handler
 com.top_logic.layout.table.export.ExcelExportHandler.tooltip = Handler für die Erstellung von Excel-Berichten aus <i>Tabellendaten</i>.
 com.top_logic.layout.table.export.ModelDownloadName = Dateiname (modellbasiert)
 com.top_logic.layout.table.export.ModelDownloadName.Config.model = Modell
-com.top_logic.layout.table.export.ModelDownloadName.Config.model.tooltip = Der <i>Kanal der Komponente</i>, von dem der zu rendernde Wert abgerufen werden soll.
-com.top_logic.layout.table.export.ModelDownloadName.tooltip = Berechnung von <i>Download-Namen</i>, die Dateinamen auf der Grundlage des Modells einer Komponente erzeugen.
+com.top_logic.layout.table.export.ModelDownloadName.Config.model.tooltip = Der <i>Komponenten-Kanal</i> zum Abrufen des Modells, dessen Bezeichnung für den dynamischen Teil des Dateinamens verwendet wird.
+com.top_logic.layout.table.export.ModelDownloadName.tooltip = Die Berechnung <i>des Download-Namens</i> generiert Dateinamen, bei denen die Bezeichnung des konfigurierten Modells übergeben wird, um den Platzhalter '{0}' in res-key zu verwenden.
 com.top_logic.layout.table.export.StreamingExcelExportHandler = Streaming-Excel-Export-Handler
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportNameKey = Dateiname des Downloads
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportNameKey.tooltip = Dateiname des erstellten Downloads.
