--- a/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks/src/main/java/META-INF/messages_en.properties
@@ -8,3 +8,106 @@ com.top_logic.graphic.blocks.model.connector.ConnectorKind.TOP_INNER.tooltip = A
 com.top_logic.graphic.blocks.model.connector.ConnectorKind.TOP_OUTER = Top outer
 com.top_logic.graphic.blocks.model.connector.ConnectorKind.TOP_OUTER.tooltip = A connector at the top outer border of a <i>block</i>.
 com.top_logic.graphic.blocks.model.connector.ConnectorKind.tooltip = Description of a <i>connector</i> position within its <code>Connector#getOwner()</code>.
+com.top_logic.graphic.flow.data.Alignment = Alignment
+com.top_logic.graphic.flow.data.Alignment.MIDDLE = Middle
+com.top_logic.graphic.flow.data.Alignment.START = Start
+com.top_logic.graphic.flow.data.Alignment.STOP = Stop
+com.top_logic.graphic.flow.data.Alignment.STRECH = Strech
+com.top_logic.graphic.flow.data.ImageAlign = Image align
+com.top_logic.graphic.flow.data.ImageAlign.NONE = None
+com.top_logic.graphic.flow.data.ImageAlign.NONE.tooltip = Does not force uniform scaling. Scale the graphic content of the given element non-uniformly if necessary such that the element's bounding box exactly matches the viewport rectangle. Note that if <code>align</code> is none, then the optional <code>meetOrSlice</code> value is ignored.
+com.top_logic.graphic.flow.data.ImageAlign.X_MAX_YMAX = X maximum ymax
+com.top_logic.graphic.flow.data.ImageAlign.X_MAX_YMAX.tooltip = Forces uniform scaling. Align the <code>min-x</code>+<code>width</code> of the element's viewBox with the maximum X value of the viewport. Align the <code>min-y</code>+<code>height</code> of the element's viewBox with the maximum Y value of the viewport.
+com.top_logic.graphic.flow.data.ImageAlign.X_MAX_YMID = X maximum ymid
+com.top_logic.graphic.flow.data.ImageAlign.X_MAX_YMID.tooltip = Forces uniform scaling. Align the <code>min-x</code>+<code>width</code> of the element's viewBox with the maximum X value of the viewport. Align the midpoint Y value of the element's viewBox with the midpoint Y value of the viewport.
+com.top_logic.graphic.flow.data.ImageAlign.X_MAX_YMIN = X maximum ymin
+com.top_logic.graphic.flow.data.ImageAlign.X_MAX_YMIN.tooltip = Forces uniform scaling. Align the <code>min-x</code>+<code>width</code> of the element's viewBox with the maximum X value of the viewport. Align the <code>min-y</code> of the element's viewBox with the smallest Y value of the viewport.
+com.top_logic.graphic.flow.data.ImageAlign.X_MID_YMAX = X mid ymax
+com.top_logic.graphic.flow.data.ImageAlign.X_MID_YMAX.tooltip = Forces uniform scaling. Align the midpoint X value of the element's viewBox with the midpoint X value of the viewport. Align the <code>min-y</code>+<code>height</code> of the element's viewBox with the maximum Y value of the viewport.
+com.top_logic.graphic.flow.data.ImageAlign.X_MID_YMID = X mid ymid
+com.top_logic.graphic.flow.data.ImageAlign.X_MID_YMID.tooltip = Forces uniform scaling. Align the midpoint X value of the element's viewBox with the midpoint X value of the viewport. Align the midpoint Y value of the element's viewBox with the midpoint Y value of the viewport. This is the default value.
+com.top_logic.graphic.flow.data.ImageAlign.X_MID_YMIN = X mid ymin
+com.top_logic.graphic.flow.data.ImageAlign.X_MID_YMIN.tooltip = Forces uniform scaling. Align the midpoint X value of the element's viewBox with the midpoint X value of the viewport. Align the <code>min-y</code> of the element's viewBox with the smallest Y value of the viewport.
+com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMAX = X minimum ymax
+com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMAX.tooltip = Forces uniform scaling. Align the <code>min-x</code> of the element's viewBox with the smallest X value of the viewport. Align the <code>min-y</code>+<code>height</code> of the element's viewBox with the maximum Y value of the viewport.
+com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMID = X minimum ymid
+com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMID.tooltip = Forces uniform scaling. Align the <code>min-x</code> of the element's viewBox with the smallest X value of the viewport. Align the midpoint Y value of the element's viewBox with the midpoint Y value of the viewport.
+com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMIN = X minimum ymin
+com.top_logic.graphic.flow.data.ImageAlign.X_MIN_YMIN.tooltip = Forces uniform scaling. Align the <code>min-x</code> of the element's viewBox with the smallest X value of the viewport. Align the <code>min-y</code> of the element's viewBox with the smallest Y value of the viewport.
+com.top_logic.graphic.flow.data.ImageScale = Image scale
+com.top_logic.graphic.flow.data.ImageScale.MEET = Meet
+com.top_logic.graphic.flow.data.ImageScale.MEET.tooltip = Scales the graphic such that: <ul> <li>The aspect ratio is preserved.</li> <li>The entire viewBox is visible within the viewport.</li> <li>The viewBox is scaled up as much as possible, while still meeting the other criteria.</li> </ul> <p> In this case, if the aspect ratio of the graphic does not match the viewport, some of the viewport will extend beyond the bounds of the viewBox (i.e., the area into which the viewBox will draw will be smaller than the viewport). meet </p>
+com.top_logic.graphic.flow.data.ImageScale.SLICE = Slice
+com.top_logic.graphic.flow.data.ImageScale.SLICE.tooltip = Scales the graphic such that: <ul> <li>The aspect ratio is preserved.</li> <li>The entire viewport is covered by the viewBox.</li> <li>The viewBox is scaled down as much as possible, while still meeting the other criteria.</li> </ul> <p> In this case, if the aspect ratio of the viewBox does not match the viewport, some of the viewBox will extend beyond the bounds of the viewport (i.e., the area into which the viewBox will draw is larger than the viewport). slice </p>
+com.top_logic.graphic.flow.data.SpaceDistribution = Space distribution
+com.top_logic.graphic.flow.data.SpaceDistribution.NONE = None
+com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_ALL = Stretch all
+com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_CONTENT = Stretch content
+com.top_logic.graphic.flow.data.SpaceDistribution.STRETCH_GAP = Stretch gap
+com.top_logic.graphic.flow.data.Widget$TypeKind = Type kind
+com.top_logic.graphic.flow.data.Widget$TypeKind.tooltip = Type codes for the <i>widget</i> hierarchy.
+com.top_logic.graphic.flow.data.Widget.TypeKind.ALIGN = Align
+com.top_logic.graphic.flow.data.Widget.TypeKind.ALIGN.tooltip = Type literal for <i>align</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER = Border
+com.top_logic.graphic.flow.data.Widget.TypeKind.BORDER.tooltip = Type literal for <i>border</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY = Empty
+com.top_logic.graphic.flow.data.Widget.TypeKind.EMPTY.tooltip = Type literal for <i>empty</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.FILL = Fill
+com.top_logic.graphic.flow.data.Widget.TypeKind.FILL.tooltip = Type literal for <i>fill</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.GRID_LAYOUT = Grid layout
+com.top_logic.graphic.flow.data.Widget.TypeKind.GRID_LAYOUT.tooltip = Type literal for <i>grid layout</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.HORIZONTAL_LAYOUT = Horizontal layout
+com.top_logic.graphic.flow.data.Widget.TypeKind.HORIZONTAL_LAYOUT.tooltip = Type literal for <i>horizontal layout</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.IMAGE = Image
+com.top_logic.graphic.flow.data.Widget.TypeKind.IMAGE.tooltip = Type literal for <i>image</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING = Padding
+com.top_logic.graphic.flow.data.Widget.TypeKind.PADDING.tooltip = Type literal for <i>padding</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT = Text
+com.top_logic.graphic.flow.data.Widget.TypeKind.TEXT.tooltip = Type literal for <i>text</i>.
+com.top_logic.graphic.flow.data.Widget.TypeKind.VERTICAL_LAYOUT = Vertical layout
+com.top_logic.graphic.flow.data.Widget.TypeKind.VERTICAL_LAYOUT.tooltip = Type literal for <i>vertical layout</i>.
+com.top_logic.graphic.flow.param.HAlign = H align
+com.top_logic.graphic.flow.param.HAlign.CENTER = Center
+com.top_logic.graphic.flow.param.HAlign.LEFT = Left
+com.top_logic.graphic.flow.param.HAlign.RIGHT = Right
+com.top_logic.graphic.flow.param.HAlign.STRETCH = Stretch
+com.top_logic.graphic.flow.param.ImageAlign = Image align
+com.top_logic.graphic.flow.param.ImageAlign.none = None
+com.top_logic.graphic.flow.param.ImageAlign.none.tooltip = Does not force uniform scaling. Scale the graphic content of the given element non-uniformly if necessary such that the element's bounding box exactly matches the viewport rectangle. Note that if <code>align</code> is none, then the optional <code>meetOrSlice</code> value is ignored.
+com.top_logic.graphic.flow.param.ImageAlign.tooltip = The alignment value indicates whether to force uniform scaling and, if so, the alignment method to use in case the aspect ratio of the viewBox doesn't match the aspect ratio of the viewport. xMidYMid is the default value.
+com.top_logic.graphic.flow.param.ImageAlign.xMaxYMax = X maximum Y maximum
+com.top_logic.graphic.flow.param.ImageAlign.xMaxYMax.tooltip = Forces uniform scaling. Align the <code>min-x</code>+<code>width</code> of the element's viewBox with the maximum X value of the viewport. Align the <code>min-y</code>+<code>height</code> of the element's viewBox with the maximum Y value of the viewport.
+com.top_logic.graphic.flow.param.ImageAlign.xMaxYMid = X maximum Y mid
+com.top_logic.graphic.flow.param.ImageAlign.xMaxYMid.tooltip = Forces uniform scaling. Align the <code>min-x</code>+<code>width</code> of the element's viewBox with the maximum X value of the viewport. Align the midpoint Y value of the element's viewBox with the midpoint Y value of the viewport.
+com.top_logic.graphic.flow.param.ImageAlign.xMaxYMin = X maximum Y minimum
+com.top_logic.graphic.flow.param.ImageAlign.xMaxYMin.tooltip = Forces uniform scaling. Align the <code>min-x</code>+<code>width</code> of the element's viewBox with the maximum X value of the viewport. Align the <code>min-y</code> of the element's viewBox with the smallest Y value of the viewport.
+com.top_logic.graphic.flow.param.ImageAlign.xMidYMax = X mid Y maximum
+com.top_logic.graphic.flow.param.ImageAlign.xMidYMax.tooltip = Forces uniform scaling. Align the midpoint X value of the element's viewBox with the midpoint X value of the viewport. Align the <code>min-y</code>+<code>height</code> of the element's viewBox with the maximum Y value of the viewport.
+com.top_logic.graphic.flow.param.ImageAlign.xMidYMid = X mid Y mid
+com.top_logic.graphic.flow.param.ImageAlign.xMidYMid.tooltip = Forces uniform scaling. Align the midpoint X value of the element's viewBox with the midpoint X value of the viewport. Align the midpoint Y value of the element's viewBox with the midpoint Y value of the viewport. This is the default value.
+com.top_logic.graphic.flow.param.ImageAlign.xMidYMin = X mid Y minimum
+com.top_logic.graphic.flow.param.ImageAlign.xMidYMin.tooltip = Forces uniform scaling. Align the midpoint X value of the element's viewBox with the midpoint X value of the viewport. Align the <code>min-y</code> of the element's viewBox with the smallest Y value of the viewport.
+com.top_logic.graphic.flow.param.ImageAlign.xMinYMax = X minimum Y maximum
+com.top_logic.graphic.flow.param.ImageAlign.xMinYMax.tooltip = Forces uniform scaling. Align the <code>min-x</code> of the element's viewBox with the smallest X value of the viewport. Align the <code>min-y</code>+<code>height</code> of the element's viewBox with the maximum Y value of the viewport.
+com.top_logic.graphic.flow.param.ImageAlign.xMinYMid = X minimum Y mid
+com.top_logic.graphic.flow.param.ImageAlign.xMinYMid.tooltip = Forces uniform scaling. Align the <code>min-x</code> of the element's viewBox with the smallest X value of the viewport. Align the midpoint Y value of the element's viewBox with the midpoint Y value of the viewport.
+com.top_logic.graphic.flow.param.ImageAlign.xMinYMin = X minimum Y minimum
+com.top_logic.graphic.flow.param.ImageAlign.xMinYMin.tooltip = Forces uniform scaling. Align the <code>min-x</code> of the element's viewBox with the smallest X value of the viewport. Align the <code>min-y</code> of the element's viewBox with the smallest Y value of the viewport.
+com.top_logic.graphic.flow.param.ImageScale = Image scale
+com.top_logic.graphic.flow.param.ImageScale.meet = Meet
+com.top_logic.graphic.flow.param.ImageScale.meet.tooltip = Scales the graphic such that: <ul> <li>The aspect ratio is preserved.</li> <li>The entire viewBox is visible within the viewport.</li> <li>The viewBox is scaled up as much as possible, while still meeting the other criteria.</li> </ul> <p> In this case, if the aspect ratio of the graphic does not match the viewport, some of the viewport will extend beyond the bounds of the viewBox (i.e., the area into which the viewBox will draw will be smaller than the viewport). meet </p>
+com.top_logic.graphic.flow.param.ImageScale.slice = Slice
+com.top_logic.graphic.flow.param.ImageScale.slice.tooltip = Scales the graphic such that: <ul> <li>The aspect ratio is preserved.</li> <li>The entire viewport is covered by the viewBox.</li> <li>The viewBox is scaled down as much as possible, while still meeting the other criteria.</li> </ul> <p> In this case, if the aspect ratio of the viewBox does not match the viewport, some of the viewBox will extend beyond the bounds of the viewport (i.e., the area into which the viewBox will draw is larger than the viewport). slice </p>
+com.top_logic.graphic.flow.param.ImageScale.tooltip = Controls how to scale an image after alignment.
+com.top_logic.graphic.flow.param.Orientation = Orientation
+com.top_logic.graphic.flow.param.Orientation.HORIZONTAL = Horizontal
+com.top_logic.graphic.flow.param.Orientation.VERTICAL = Vertical
+com.top_logic.graphic.flow.param.SpaceDistribution = Space distribution
+com.top_logic.graphic.flow.param.SpaceDistribution.NONE = None
+com.top_logic.graphic.flow.param.SpaceDistribution.STRETCH_CONTENT = Stretch content
+com.top_logic.graphic.flow.param.SpaceDistribution.STRETCH_GAP = Stretch gap
+com.top_logic.graphic.flow.param.VAlign = V align
+com.top_logic.graphic.flow.param.VAlign.BOTTOM = Bottom
+com.top_logic.graphic.flow.param.VAlign.CENTER = Center
+com.top_logic.graphic.flow.param.VAlign.STRETCH = Stretch
+com.top_logic.graphic.flow.param.VAlign.TOP = Top
