Ticket #28310: Added option to prevent model auto-upgrade.
If baseline differs from model and auto-upgrade is set to "prevent",
system startup fails. The use-case is mainly for testing that migrations
of new framework versions are fully described.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1412,7 +1412,7 @@ com.top_logic.element.model.DynamicModelService.Config.ModuleSetting.enabled.too
 com.top_logic.element.model.DynamicModelService.Config.ModuleSetting.name = Name
 com.top_logic.element.model.DynamicModelService.Config.ModuleSetting.name.tooltip = Der Strukturname
 com.top_logic.element.model.DynamicModelService.Config.auto-upgrade = Automatisches Upgrade
-com.top_logic.element.model.DynamicModelService.Config.auto-upgrade.tooltip = Passt das persistente Anwendungsmodell automatisch an Änderungen an, die während des Bootens in der statischen Modellkonfiguration durchgeführt werden.
+com.top_logic.element.model.DynamicModelService.Config.auto-upgrade.tooltip = Strategie, die zu befolgen ist, wenn die statische Modellkonfiguration der aktuellen Softwareversion von der persistenten Modell-Baseline abweicht.
 com.top_logic.element.model.DynamicModelService.Config.declarations = Erklärungen
 com.top_logic.element.model.DynamicModelService.Config.declarations.tooltip = Liste der Modelldateiverweise, die zusammen das Antragsmodell bilden.
 com.top_logic.element.model.DynamicModelService.Config.settings = Module
@@ -1420,6 +1420,14 @@ com.top_logic.element.model.DynamicModelService.Config.settings.tooltip = Alle k
 com.top_logic.element.model.DynamicModelService.MigrationProcessors.processors = Prozessoren
 com.top_logic.element.model.DynamicModelService.MigrationProcessors.processors.tooltip = <i>Migrationsprozessoren</i> zur Ausführung.
 com.top_logic.element.model.DynamicModelService.tooltip = Dienst, der das dynamische Anwendungsmodell verwaltet.
+com.top_logic.element.model.UpgradeStrategy = Upgrade-Strategie
+com.top_logic.element.model.UpgradeStrategy.IGNORE = Ignorieren
+com.top_logic.element.model.UpgradeStrategy.IGNORE.tooltip = Ignorieren Sie Modelländerungen in der neuen Softwareversion und booten Sie mit dem aktuellen Anwendungsmodell.
+com.top_logic.element.model.UpgradeStrategy.PREVENT = Verhindern
+com.top_logic.element.model.UpgradeStrategy.PREVENT.tooltip = Verhindern Sie den Start der Anwendung, wenn sich das Modell der neuen Softwareversion von der Modell-Basislinie der laufenden Anwendung unterscheidet.
+com.top_logic.element.model.UpgradeStrategy.UPGRADE = Upgrade
+com.top_logic.element.model.UpgradeStrategy.UPGRADE.tooltip = Wenn sich das Modell in einer neuen Softwareversion von der Modell-Baseline der laufenden Anwendung unterscheidet, aktualisieren Sie das Anwendungsmodell mit den abgeleiteten Änderungen aus der neuen Softwareversion.
+com.top_logic.element.model.UpgradeStrategy.tooltip = Strategie für ein automatisches Upgrade, wenn das Modell einer neuen Softwareversion von der Modell-Basislinie der laufenden Anwendung abweicht.
 com.top_logic.element.model.diff.config.AddAnnotations = Anmerkungen hinzufügen
 com.top_logic.element.model.diff.config.AddAnnotations.tooltip = Beschreibt das Hinzufügen einer <i>Annotation</i> zu einem <i>Modellteil</i>.
 com.top_logic.element.model.diff.config.AddGeneralization = Generalisierung hinzufügen
@@ -1979,7 +1987,7 @@ com.top_logic.element.model.migration.model.refactor.InternationalizeAttributePr
 com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.Config.attribute = Attribut
 com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.Config.attribute.tooltip = Das Attribut, dessen Werte internationalisiert werden sollen.
 com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.Config.columns = Rubriken
-com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.Config.columns.tooltip = Die unterstützten Sprachen sind auf Spaltennamen abgebildet, in denen der Wert für die entsprechende Sprache gespeichert ist.
+com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.Config.columns.tooltip = Die unterstützten Sprachen sind auf Spaltennamen abgebildet, in denen zuvor der Wert für die entsprechende Sprache gespeichert war. <p> Standardmäßig wird die Standard-Systemsprache aus einer Spalte übernommen, die wie das angegebene Zielattribut benannt ist. </p>
 com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.Config.table = Tabelle
 com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.Config.table.tooltip = Der Name der Tabelle, die das nicht-internationalisierte Attribut als Spalte definiert.
 com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.tooltip = <i>Migrationsprozessor</i>, der String-Attribute in I18N-Attribute umwandelt.
