--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -1412,7 +1412,7 @@ com.top_logic.element.model.DynamicModelService.Config.ModuleSetting.enabled.too
 com.top_logic.element.model.DynamicModelService.Config.ModuleSetting.name = Name
 com.top_logic.element.model.DynamicModelService.Config.ModuleSetting.name.tooltip = The structure name
 com.top_logic.element.model.DynamicModelService.Config.auto-upgrade = Auto upgrade
-com.top_logic.element.model.DynamicModelService.Config.auto-upgrade.tooltip = Automatically adjusts the persistent application model to changes performed in the static model configuration during boot.
+com.top_logic.element.model.DynamicModelService.Config.auto-upgrade.tooltip = Strategy to follow, if the static model configuration of the current software version differs from the persistent model baseline.
 com.top_logic.element.model.DynamicModelService.Config.declarations = Declarations
 com.top_logic.element.model.DynamicModelService.Config.declarations.tooltip = List of model file references that together build up the the application model.
 com.top_logic.element.model.DynamicModelService.Config.settings = Settings
@@ -1420,6 +1420,14 @@ com.top_logic.element.model.DynamicModelService.Config.settings.tooltip = All co
 com.top_logic.element.model.DynamicModelService.MigrationProcessors.processors = Processors
 com.top_logic.element.model.DynamicModelService.MigrationProcessors.processors.tooltip = <i>Migration processors</i> to execute.
 com.top_logic.element.model.DynamicModelService.tooltip = Service managing the dynamic application model.
+com.top_logic.element.model.UpgradeStrategy = Upgrade strategy
+com.top_logic.element.model.UpgradeStrategy.IGNORE = Ignore
+com.top_logic.element.model.UpgradeStrategy.IGNORE.tooltip = Ignore model changes in the new software version and boot with the current application model.
+com.top_logic.element.model.UpgradeStrategy.PREVENT = Prevent
+com.top_logic.element.model.UpgradeStrategy.PREVENT.tooltip = Prevent application startup, if the model of the new software version differs from the model baseline of the running application.
+com.top_logic.element.model.UpgradeStrategy.UPGRADE = Upgrade
+com.top_logic.element.model.UpgradeStrategy.UPGRADE.tooltip = When the model in a new software version differs from the model baseline of the running application, upgrade the application model with inferred changes from the new software version.
+com.top_logic.element.model.UpgradeStrategy.tooltip = Strategy for automatic upgrade, if the model of a new software version differs form the model baseline of the running application.
 com.top_logic.element.model.diff.config.AddAnnotations = Add annotations
 com.top_logic.element.model.diff.config.AddAnnotations.tooltip = Describes the addition of a <i>annotation</i> to a <i>model part</i>.
 com.top_logic.element.model.diff.config.AddGeneralization = Add generalization
@@ -1979,7 +1987,7 @@ com.top_logic.element.model.migration.model.refactor.InternationalizeAttributePr
 com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.Config.attribute = Attribute
 com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.Config.attribute.tooltip = The attribute whose values should be internationalized.
 com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.Config.columns = Columns
-com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.Config.columns.tooltip = The supported languages mapped to column names, where the value for the corresponding language is stored.
+com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.Config.columns.tooltip = The supported languages mapped to column names, where the value for the corresponding language was stored before. <p> By default, the default system language is taken from a column that is named like the given target attribute. </p>
 com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.Config.table = Table
 com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.Config.table.tooltip = The name of the table, that defines the non-internationalized attribute as column.
 com.top_logic.element.model.migration.model.refactor.InternationalizeAttributeProcessor.tooltip = <i>Migration processor</i> that makes string attributes to I18N attributes.
