--- a/com.top_logic.model.wysiwyg/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.wysiwyg/src/main/java/META-INF/messages_en.properties
@@ -12,6 +12,10 @@ com.top_logic.model.wysiwyg.fieldprovider.StructuredTextTagProvider.Config.featu
 com.top_logic.model.wysiwyg.fieldprovider.StructuredTextTagProvider.tooltip = <i>Display provider</i> for <code>Html</code>-typed attributes.
 com.top_logic.model.wysiwyg.i18n.I18NStructuredTextAttributeStorage = Internationalization structured text attribute storage
 com.top_logic.model.wysiwyg.i18n.I18NStructuredTextAttributeStorage.tooltip = The <i>storage</i> for <i>internationalization structured text</i>.
+com.top_logic.model.wysiwyg.migration.InternationalizeHtmlAttributeProcessor = Internationalize HTML attribute processor
+com.top_logic.model.wysiwyg.migration.InternationalizeHtmlAttributeProcessor.Config.columns = Columns
+com.top_logic.model.wysiwyg.migration.InternationalizeHtmlAttributeProcessor.Config.columns.tooltip = The supported languages mapped to source attributes from which the value for the corresponding language is taken from. <p> By default, the default system language is taken from the given target attribute. </p> <p> Only if the source attributes do not store their values in a column with the same name a the attribute, <i>Columns</i> has to be configured separately. The source column is not derived from potential attribute annotations. </p>
+com.top_logic.model.wysiwyg.migration.InternationalizeHtmlAttributeProcessor.tooltip = <i>Migration processor</i> that makes HTML (structured text) attributes to I18N HTML attributes.
 com.top_logic.model.wysiwyg.report.HtmlReportTagProvider = HTML report tag provider
 com.top_logic.model.wysiwyg.report.HtmlReportTagProvider.Config.feature-set = Feature set
 com.top_logic.model.wysiwyg.report.HtmlReportTagProvider.Config.feature-set.tooltip = Name of the feature set in the <i>structured text configuration service</i> to use for editing report attributes.
