--- a/com.top_logic.model.wysiwyg/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.wysiwyg/src/main/java/META-INF/messages_de.properties
@@ -12,6 +12,10 @@ com.top_logic.model.wysiwyg.fieldprovider.StructuredTextTagProvider.Config.featu
 com.top_logic.model.wysiwyg.fieldprovider.StructuredTextTagProvider.tooltip = <i>Anbieter</i> für Attribute <code>Html</code><i>anzeigen</i>.
 com.top_logic.model.wysiwyg.i18n.I18NStructuredTextAttributeStorage = Internationalisierung strukturierte Text-Attribut-Speicherung
 com.top_logic.model.wysiwyg.i18n.I18NStructuredTextAttributeStorage.tooltip = Der <i>Speicher</i> für die <i>Internationalisierung strukturierten Text</i>.
+com.top_logic.model.wysiwyg.migration.InternationalizeHtmlAttributeProcessor = HTML-Attribut internationalisieren
+com.top_logic.model.wysiwyg.migration.InternationalizeHtmlAttributeProcessor.Config.columns = Spalten
+com.top_logic.model.wysiwyg.migration.InternationalizeHtmlAttributeProcessor.Config.columns.tooltip = Die unterstützten Sprachen, die den Quellattributen zugeordnet sind, aus denen der Wert für die entsprechende Sprache entnommen wird. <p> Standardmäßig wird die Standard-Systemsprache aus dem angegebenen Zielattribut übernommen. </p> <p> Nur wenn die Quellattribute ihre Werte nicht in einer Spalte mit demselben Namen wie das Attribut speichern, muss <i>Columns</i> separat konfiguriert werden. Die Quellspalte wird nicht von möglichen Annotationen des Attributs abgeleitet. </p>
+com.top_logic.model.wysiwyg.migration.InternationalizeHtmlAttributeProcessor.tooltip = <i>Migrationsprozessor</i>, der HTML-Attribute (strukturierter Text) in I18N-HTML-Attribute umwandelt.
 com.top_logic.model.wysiwyg.report.HtmlReportTagProvider = Anbieter von HTML-Berichts-Tags
 com.top_logic.model.wysiwyg.report.HtmlReportTagProvider.Config.feature-set = Merkmalsset
 com.top_logic.model.wysiwyg.report.HtmlReportTagProvider.Config.feature-set.tooltip = Name des Feature-Sets im <i>Konfigurationsdienst für strukturierten Text</i>, das für die Bearbeitung von Berichtsattributen verwendet werden soll.
