Ticket #28310: I18N for migration processors.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -2094,6 +2094,10 @@ com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcesso
 com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.link-table.tooltip = Der Name der Verknüpfungstabelle, die das zu füllende Auftragsattribut definiert.
 com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.order-column = Spalte bestellen
 com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.order-column.tooltip = Die zu füllende Auftragsspalte in der Verknüpfungstabelle.
+com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.reference = Referenz
+com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.reference-column = Referenzspalte
+com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.reference-column.tooltip = Name der Referenzspalte in der angegebenen <i>Link-Tabelle</i>, die die mit dem in einer Tabellenzeile gespeicherten Link verbundene Referenz enthält. <p> Der Wert ist nur relevant, wenn <i>Reference</i> angegeben ist. </p>
+com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.reference.tooltip = Die Referenz, für die die Linkreihenfolge synthetisiert werden soll. <p> Wenn nicht angegeben, werden alle Links der angegebenen <i>Link-Tabelle</i> berücksichtigt. </p>
 com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.scope-ref = Referenz zum Geltungsbereich
 com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.scope-ref.tooltip = Verweis auf das Scope/Parent-Objekt. <p> Eine Reihenfolge wird festgelegt, indem alle Werte des <i>Attributs Source order</i> für alle Links, die von demselben Scope-Objekt stammen, sortiert werden. </p>
 com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.source-order-attribute = Attribut Quellauftrag
