--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -2094,6 +2094,10 @@ com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcesso
 com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.link-table.tooltip = The name of the link table that defines the order attribute to be filled.
 com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.order-column = Order column
 com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.order-column.tooltip = The order column in the link table to fill.
+com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.reference = Reference
+com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.reference-column = Reference column
+com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.reference-column.tooltip = Name of the reference column in the given <i>Link table</i> that contains the reference associated with the link stored in a table row. <p> The value is only relevant, if <i>Reference</i> is given. </p>
+com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.reference.tooltip = The reference for which link order should be synthesized. <p> If not given, all links of the given <i>Link table</i> are considered. </p>
 com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.scope-ref = Scope reference
 com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.scope-ref.tooltip = Reference to the scope/parent object. <p> An order is established by sorting all values of the <i>Source order attribute</i> for all links originating from the same scope object. </p>
 com.top_logic.element.model.migration.model.refactor.SynthesizeLinkOrderProcessor.Config.source-order-attribute = Source order attribute
