Ticket #28577: Improve configurability of WebFolder display.

--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
@@ -722,6 +722,7 @@ class.com.top_logic.common.webfolder.ui.commands.I18NConstants.ERROR_DOCUMENT_EX
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.ERROR_FOLDER_CREATE__NAME = Das Anlegen des Ordners "{0}" schlug fehl.
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.ERROR_FOLDER_EXISTS__NAME = Es gibt bereits einen Ordner "{0}".
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.LOCK_NOT_POSSIBLE_BECAUSE_ALREADY_LOCKED = Die Datei kann nicht gesperrt werden, da ein anderer Nutzer sie soeben gesperrt hat.
+class.com.top_logic.common.webfolder.ui.commands.I18NConstants.MESSAGE_KEY_FILENAME_MUST_END_WITH = Der Dateiname "{0}" hat keine zulässige Endung. Nur folgende Endungen sind zulässig: {1}
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.MSG_ALREADY_IN_CLIPBOARD = Das Objekt ist bereits in der Zwischenablage
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.MSG_ALREADY_LOCKED__USER = Gesperrt von "{0}"
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.MSG_DOCUMENT_LOCKED = Das Objekt ist gesperrt.
@@ -748,6 +749,7 @@ class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPLOAD_DIALOG.mes
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPLOAD_DIALOG.title = Dokument in Ordner hochladen.
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPLOAD_DOCUMENT = Hochladen
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPLOAD_DOCUMENT_NO_DOCUMENT_SELECTED = Es ist kein Dokument ausgewählt
+class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPLOAD_INFO = Sie können mehrere Dokumente auf einmal hochladen.
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.VERSION_DIALOG._clipboard = Der Zwischenablage hinzufügen
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.VERSION_DIALOG.header = Versionen des Dokuments
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.VERSION_DIALOG.input._clipboard = 
