--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
@@ -722,6 +722,7 @@ class.com.top_logic.common.webfolder.ui.commands.I18NConstants.ERROR_DOCUMENT_EX
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.ERROR_FOLDER_CREATE__NAME = Error creating folder "{0}".
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.ERROR_FOLDER_EXISTS__NAME = There is already a folder named "{0}".
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.LOCK_NOT_POSSIBLE_BECAUSE_ALREADY_LOCKED = The file can not be locked, as another user just locked it.
+class.com.top_logic.common.webfolder.ui.commands.I18NConstants.MESSAGE_KEY_FILENAME_MUST_END_WITH = The suffix of the file "{0}" is wrong. Only the following suffix are possible: {1}
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.MSG_ALREADY_IN_CLIPBOARD = The object already is in clipboard
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.MSG_ALREADY_LOCKED__USER = Locked by "{0}"
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.MSG_DOCUMENT_LOCKED = The object is locked.
@@ -748,6 +749,7 @@ class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPLOAD_DIALOG.mes
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPLOAD_DIALOG.title = Upload document to current folder.
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPLOAD_DOCUMENT = Upload
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPLOAD_DOCUMENT_NO_DOCUMENT_SELECTED = No document selected
+class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPLOAD_INFO = You can upload multiple documents at once.
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.VERSION_DIALOG._clipboard = Add to clipboard
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.VERSION_DIALOG.header = Document versions
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.VERSION_DIALOG.input._clipboard = 
