Ticket #28336: Replaced custom confirmation with default confirmation.
Updated I18N.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -7785,6 +7785,8 @@ com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirm = Confirm
 com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirm.tooltip = Whether the user is asked for confirmation before the command is actually executed.
 com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirmMessage = Confirm message
 com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirmMessage.tooltip = The message to display to the user requesting for confirmation that the command should really be executed. <p> The message can refer to the target model of the command using the <code>{0}</code> placeholder. </p> <p> The message is only displayed, if <i>Confirm</i> is set. If no value is set, but <i>Confirm</i> is checked, a generic confirmation message is displayed. </p>
+com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirmation = Confirmation
+com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirmation.tooltip = The algorithm to compute a confirm message before a command is executed. <p> If the computed confirm message is <code>null</code>, no confirmation is displayed. </p>
 com.top_logic.tool.boundsec.CommandHandler.Display.COMMANDS = Commands
 com.top_logic.tool.boundsec.CommandHandler.Display.COMMANDS.tooltip = Display the commands in the regular button bar.
 com.top_logic.tool.boundsec.CommandHandler.Display.CONTEXT_MENU = Context menu
@@ -8051,6 +8053,16 @@ com.top_logic.tool.boundsec.compound.gui.admin.rolesProfile.SecurityConfig.profi
 com.top_logic.tool.boundsec.compound.gui.admin.rolesProfile.SecurityConfig.tooltip = <i>Configuration item</i> for the textual persistence of the <i>roles profile handler</i> profiles as configured in the <i>edit security profile component</i>.
 com.top_logic.tool.boundsec.conditional.PreconditionCommandHandler = Precondition command handler
 com.top_logic.tool.boundsec.conditional.PreconditionCommandHandler.tooltip = <i>Command handler</i> that can only be executed if some internal preconditions are given.
+com.top_logic.tool.boundsec.confirm.DefaultConfirmation = Default confirmation
+com.top_logic.tool.boundsec.confirm.DefaultConfirmation.Config.confirmMessage = Confirm message
+com.top_logic.tool.boundsec.confirm.DefaultConfirmation.Config.confirmMessage.tooltip = The message to display to the user requesting for confirmation that the command should really be executed. <p> The message can refer to the target model of the command using the <code>{0}</code> placeholder. </p> <p> If no message is specified, a default confirmation message is shown. </p>
+com.top_logic.tool.boundsec.confirm.DefaultConfirmation.tooltip = <i>Command confirmation</i> with a custom message.
+com.top_logic.tool.boundsec.confirm.ScriptedConfirmation = Scripted confirmation
+com.top_logic.tool.boundsec.confirm.ScriptedConfirmation.Config.function = Function
+com.top_logic.tool.boundsec.confirm.ScriptedConfirmation.Config.function.tooltip = A function filling the given message with arguments. <p> The function can also decide not to return a confirmation method on certain conditions. </p> <p> The following arguments can be used: <code>message -> model -> command -> ...</code> </p> <ul> <li>The static message with placeholders configured above. <li>The target model of the command being executed. <li>The label of the command being executed. </ul>
+com.top_logic.tool.boundsec.confirm.ScriptedConfirmation.Config.message = Message
+com.top_logic.tool.boundsec.confirm.ScriptedConfirmation.Config.message.tooltip = A static message that contain placeholders for arguments. <p> This message can be filled with arguments by the given confirmation function. </p>
+com.top_logic.tool.boundsec.confirm.ScriptedConfirmation.tooltip = Dynamic <i>command confirmation</i> that create a confirmation message with TL-Script.
 com.top_logic.tool.boundsec.gui.EditRoleComponent = Edit role component
 com.top_logic.tool.boundsec.gui.EditRoleComponent$ApplyRoleCommand = Apply role command
 com.top_logic.tool.boundsec.gui.EditRoleComponent$ApplyRoleCommand.tooltip = Apply command handler for Bounded roles.
