--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -7785,6 +7785,8 @@ com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirm = Mit Bestätigu
 com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirm.tooltip = Ob der Benutzer zur Bestätigung aufgefordert wird, bevor der Befehl tatsächlich ausgeführt wird.
 com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirmMessage = Bestätigungsmeldung
 com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirmMessage.tooltip = Die Meldung, die dem Benutzer angezeigt werden soll, um zu bestätigen, dass der Befehl wirklich ausgeführt werden soll. <p> Die Meldung kann sich über den Platzhalter <code>{0}</code> </p> auf das Zielmodell des Befehls beziehen. <p> Die Meldung wird nur angezeigt, wenn <i>Confirm</i> gesetzt ist. Wenn kein Wert gesetzt ist, aber <i>Confirm</i> markiert ist, wird eine generische Bestätigungsmeldung angezeigt.</p>
+com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirmation = Bestätigung
+com.top_logic.tool.boundsec.CommandHandler.ConfirmConfig.confirmation.tooltip = Der Algorithmus zur Berechnung einer Bestätigungsmeldung, bevor ein Befehl ausgeführt wird. <p> Wenn die berechnete Bestätigungsmeldung <code>null</code> ist, wird keine Bestätigung angezeigt. </p>
 com.top_logic.tool.boundsec.CommandHandler.Display.COMMANDS = Befehle
 com.top_logic.tool.boundsec.CommandHandler.Display.COMMANDS.tooltip = Zeigen Sie die Befehle in der regulären Knopfleiste an.
 com.top_logic.tool.boundsec.CommandHandler.Display.CONTEXT_MENU = Kontext-Menü
@@ -8051,6 +8053,16 @@ com.top_logic.tool.boundsec.compound.gui.admin.rolesProfile.SecurityConfig.profi
 com.top_logic.tool.boundsec.compound.gui.admin.rolesProfile.SecurityConfig.tooltip = <i>Konfigurationselement</i> für die textuelle Persistenz der <i>Rollenprofil-Handler-Profile</i>, wie in der <i>Komponente Berechtigungsprofil bearbeiten</i> konfiguriert.
 com.top_logic.tool.boundsec.conditional.PreconditionCommandHandler = Vorbedingung Befehlshandler
 com.top_logic.tool.boundsec.conditional.PreconditionCommandHandler.tooltip = <i>Befehlshandler</i>, der nur ausgeführt werden kann, wenn einige interne Vorbedingungen gegeben sind.
+com.top_logic.tool.boundsec.confirm.DefaultConfirmation = Standard-Bestätigung
+com.top_logic.tool.boundsec.confirm.DefaultConfirmation.Config.confirmMessage = Bestätigungsnachricht
+com.top_logic.tool.boundsec.confirm.DefaultConfirmation.Config.confirmMessage.tooltip = Die Nachricht, die dem Benutzer angezeigt werden soll, um zu bestätigen, dass der Befehl wirklich ausgeführt werden soll. <p> Die Nachricht kann sich auf das Zielmodell des Befehls beziehen, indem der Platzhalter <code>{0}</code> verwendet wird. </p> <p> Wird keine Nachricht angegeben, wird eine Standardbestätigungsnachricht angezeigt. </p>
+com.top_logic.tool.boundsec.confirm.DefaultConfirmation.tooltip = <i>Befehlsbestätigung</i> mit einer benutzerdefinierten Nachricht.
+com.top_logic.tool.boundsec.confirm.ScriptedConfirmation = Skriptgesteuerte Bestätigung
+com.top_logic.tool.boundsec.confirm.ScriptedConfirmation.Config.function = Funktion
+com.top_logic.tool.boundsec.confirm.ScriptedConfirmation.Config.function.tooltip = Eine Funktion, die die angegebene Nachricht mit Argumenten füllt. <p> Die Funktion kann auch beschließen, unter bestimmten Bedingungen keine Bestätigungsmethode zurückzugeben. </p> <p> Die folgenden Argumente können verwendet werden: <code>message -> model -> command -> ...</code> </p> <ul> <li>Die statische Nachricht mit den oben konfigurierten Platzhaltern. <li>Das Zielmodell des auszuführenden Befehls. <li>Die Bezeichnung des auszuführenden Befehls. </ul>
+com.top_logic.tool.boundsec.confirm.ScriptedConfirmation.Config.message = Nachricht
+com.top_logic.tool.boundsec.confirm.ScriptedConfirmation.Config.message.tooltip = Eine statische Nachricht, die Platzhalter für Argumente enthält. <p> Diese Nachricht kann von der angegebenen Bestätigungsfunktion mit Argumenten gefüllt werden. </p>
+com.top_logic.tool.boundsec.confirm.ScriptedConfirmation.tooltip = Dynamische <i>Befehlsbestätigung</i>, die eine Bestätigungsmeldung mit TL-Script erstellt.
 com.top_logic.tool.boundsec.gui.EditRoleComponent = Rollenbestandteil bearbeiten
 com.top_logic.tool.boundsec.gui.EditRoleComponent$ApplyRoleCommand = Rollenbefehl anwenden
 com.top_logic.tool.boundsec.gui.EditRoleComponent$ApplyRoleCommand.tooltip = Wenden Sie den Command Handler für Gebundene Rollen an.
